add: power report
