# internal/api/http/server.go
@@ -145,6 +145,7 @@ func NewServer(conf *config.Config, log *slog.Logger, core Core) *Server {
 			r.Get("/report/user", report.UsersStatistics(log, core))
 			r.Get("/report/charger", report.ChargerStatistics(log, core))
 			r.Get("/report/export", report.ExportStatistics(log, core))
+			r.Get("/report/power", report.PowerStatistics(log, core))
 			r.Get("/report/uptime", report.StationUptimeStatistics(log, core))
 			r.Get("/report/status", report.StationStatusStatistics(log, core))
 
